--- a/photo.html
+++ b/photo.html
@@ -233,7 +233,7 @@ footer{
         <div class="output-section" id="output-section">
             <h2>照片預覽(長按or右鍵儲存相片)</h2>
             <canvas id="photoCanvas" width="2000" height="1200"></canvas>
-            <img id="finalImage" alt="最終照片">
+            <img id="finalImage" alt="合成排面照片">
         </div>
 <footer>
     <p>
@@ -264,6 +264,7 @@ const defaultTexts = [
     "落地",
     "騎樓",
 ];
+
 
 // 創建一個新的照片輸入區塊
 function createPhotoInputBlock(index) {
@@ -552,5 +553,3 @@ combineBtn.addEventListener('click', async () => {
 </script>
 </body>
 </html>
-
-
