--- a/photo.html
+++ b/photo.html
@@ -201,17 +201,12 @@ footer {
         gap: 10px;
     }
 }
-h1, h2 {
-    white-space: nowrap;     /* 不換行 */
-    overflow: hidden;        /* 超出隱藏 */
-    text-overflow: ellipsis; /* 超出顯示 "..." */
+h2 {
+    white-space: nowrap;        /* 不換行 */
+    font-size: clamp(20px, 2vw, 24px); 
+    /* 根據螢幕寬度自動縮放字體，最小14px 最大24px */
 }
 
-@media (max-width: 290px) {
-    h1, h2 {
-        max-width: 100%;  /* 限制標題寬度 */
-    }
-}
 footer{
     color: #c4c1c1;
 }
