--- a/photo.html
+++ b/photo.html
@@ -450,13 +450,10 @@ footer{
 
 </div>
 <footer>
-    <p>
-    Copyright © 2025 Edward. All rights reserved.<br>
-    在Gemini的協助下完成。<br>
-    免責聲明：本應用程式為圖片處理工具，僅供個人使用，不提供檔案儲存或備份服務。使用者上傳之內容，應確保其合法性，本程式對任何因使用本應用程式而產生之內容不負任何責任。
-    </p>
+    <p>Copyright © 2025 Edward. All rights reserved.</p>
+    <p>在 Gemini 的協助下完成。</p>
+    <p><strong>免責聲明：</strong>本網頁僅作為圖片處理工具，供個人使用，不提供檔案儲存或備份服務。使用者須自行確保所上傳內容之合法性與正確性。本網頁及開發者對於因使用本網頁所產生或引發之任何後果，概不負責。</p>
 </footer>
-
 </div>
 <script>
 const classNameInput = document.getElementById('className');
