--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     // 一開啟就直接跳轉
     window.onload = function() {
-      window.location.href = "photo.html"; 
+      window.location.href = "photogen/photo.html"; 
     };
 
     // 如果想延遲 3 秒才跳轉：
