--- a/photo.html
+++ b/photo.html
@@ -1,460 +1,19 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>排面照產生器</title>
-    <style>
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    margin: 0;
-    padding: 20px;
-}
+  <meta charset="UTF-8">
+  <title>自動跳轉</title>
+  <script>
+    // 一開啟就直接跳轉
+    window.onload = function() {
+      window.location.href = "photogen/photo.html"; 
+    };
 
-/* 新增的 CSS: 在彈出視窗開啟時，鎖定背景滾動 */
-body.no-scroll {
-    overflow: hidden;
-}
-
-.container {
-    background-color: #fff;
-    padding: 20px 40px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    width: 90%;
-    max-width: 900px;
-    box-sizing: border-box;
-    flex-grow: 1; 
-}
-
-h1 {
-    color: #0056b3;
-    display: flex; /* 讓 h1 內容和按鈕並排 */
-    justify-content: center;
-    align-items: center;
-}
-
-.info-icon {
-    margin-left: 10px;
-    background-color: #007bff;
-    color: white;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    font-size: 16px;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    user-select: none; /* 防止文字被選取 */
-}
-
-.info-icon:hover {
-    background-color: #0056b3;
-}
-
-.controls {
-    margin-bottom: 20px;
-}
-
-#photoInputsContainer {
-    margin-bottom: 20px;
-    display: flex;
-    flex-wrap: wrap; 
-    justify-content: center;
-    gap: 20px;
-    padding-right: 15px; 
-}
-
-.photo-uploader, #addPhotoBlock {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 5px;
-    padding: 15px;
-    border: 1px dashed #aaa; 
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    width: 45%; 
-}
-
-#addPhotoBlock {
-    cursor: pointer;
-    justify-content: center; 
-    align-items: center; 
-    font-size: 50px;
-    color: #ccc;
-    user-select: none; 
-    transition: transform 0.2s ease-in-out, color 0.2s ease-in-out;
-    border: 2px dashed #ccc;
-}
-
-#addPhotoBlock:hover {
-    transform: scale(1.05);
-    color: #999;
-}
-
-.delete-btn {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    background-color: #dc3545;
-    color: white;
-    border: none;
-    border-radius: 50%; 
-    width: 28px;
-    height: 28px;
-    padding: 0;
-    line-height: 1;
-    font-size: 18px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.photo-uploader .delete-btn:hover {
-    background-color: #c82333;
-}
-
-input[type="text"], input[type="file"], select {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-/* 隱藏原本的檔案上傳按鈕 */
-.photo-input {
-    display: none;
-}
-
-.photo-preview-container {
-    width: 100%;
-    min-height: 150px;
-    border: 2px dashed #ccc;
-    border-radius: 5px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 10px;
-    background-color: #e9e9e9;
-    cursor: pointer; /* 讓整個預覽區塊可以點擊 */
-    text-align: center;
-}
-
-.photo-preview {
-    max-width: 100%;
-    max-height: 150px;
-    display: none; 
-}
-
-/* 新增的預覽區塊提示文字樣式 */
-.photo-preview-text {
-    color: #888;
-    font-size: 14px;
-    padding: 20px;
-}
-
-.signature-section {
-    margin: 20px 0;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    border: 1px solid #ddd;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-}
-
-#signatureCanvas {
-    width: 100%; 
-    max-width: 400px;
-    height: 150px;
-    background-color: #fff;
-    border-radius: 5px;
-    display: block; 
-    margin: 0 auto; 
-    transition: all 0.3s ease;
-}
-
-/* 禁用狀態的樣式 */
-#signatureCanvas.disabled {
-    pointer-events: none;
-    opacity: 0.5;
-    cursor: default;
-    border: 2px dashed #ccc;
-    background-color: #e9e9e9;
-}
-
-/* 啟用狀態的樣式 */
-#signatureCanvas.active {
-    pointer-events: auto;
-    opacity: 1;
-    cursor: crosshair;
-    border: 2px solid #007bff;
-    background-color: #fff;
-}
-
-.signature-controls {
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
-
-.action-buttons {
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    margin-top: 10px;
-}
-
-button {
-    padding: 12px 24px;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-    margin: 5px;
-}
-
-#combineBtn { background-color: #007bff; }
-#combineBtn:hover { background-color: #0056b3; }
-
-#enableSignatureBtn { background-color: #28a745; }
-#enableSignatureBtn:hover { background-color: #218838; }
-
-#clearSignatureBtn { background-color: #dc3545; }
-#clearSignatureBtn:hover { background-color: #c82333; }
-
-
-.output-section {
-    margin-top: 20px;
-    display: none;
-}
-
-#finalImage {
-    max-width: 100%;
-    height: auto;
-    border: 2px solid #ccc;
-    display: none; 
-    margin: 20px auto 0;
-}
-
-#photoCanvas {
-    display: none; 
-}
-
-.photo-alert {
-    color: red;
-    font-size: 14px;
-    font-weight: bold;
-    margin-top: 5px;
-}
-.hidden {
-    display: none !important;
-}
-
-footer {
-    margin-top: 20px;
-    font-size: 12px;
-    color: #777;
-    text-align: center;
-}
-
-@media (max-width: 500px) {
-    .container {
-        padding: 20px 15px;
-        width: 95%;
-    }
-    .photo-uploader, #addPhotoBlock {
-        width: 100%; 
-        max-width: 350px; 
-    }
-    .action-buttons {
-        flex-direction: column;
-        gap: 10px;
-    }
-}
-footer {
-    margin-top: 20px;
-    font-size: 12px;
-    color: #777;
-    text-align: center;
-}
-
-@media (max-width: 600px) {
-    .container {
-        padding: 20px 15px;
-    }
-    .photo-uploader, #addPhotoBlock {
-        width: 100%;
-    }
-    .action-buttons {
-        flex-direction: column;
-        gap: 10px;
-    }
-}
-h2 {
-    white-space: nowrap; 
-    font-size: clamp(20px, 2vw, 24px); 
-}
-
-footer{
-    color: #c4c1c1;
-}
-
-/* Modal Styles */
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-}
-
-.modal-overlay.visible {
-    opacity: 1;
-    visibility: visible;
-}
-
-.modal-content {
-    background-color: #fff;
-    padding: 30px;
-    border-radius: 8px;
-    position: relative;
-    width: 90%;
-    max-width: 500px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    text-align: left;
-    transform: translateY(-20px);
-    transition: transform 0.3s ease;
-    max-height: 80vh; 
-    overflow-y: auto; 
-    -webkit-overflow-scrolling: touch; 
-}
-
-.modal-overlay.visible .modal-content {
-    transform: translateY(0);
-}
-
-.modal-content h2 {
-    margin-top: 0;
-    font-size: 24px;
-    color: #0056b3;
-    border-bottom: 2px solid #eee;
-    padding-bottom: 10px;
-}
-
-.modal-content p {
-    line-height: 1.6;
-}
-
-.modal-content ul {
-    margin-top: 10px;
-    padding-left: 20px;
-}
-
-.close-button {
-    position: absolute;
-    top: 10px;
-    right: 15px;
-    font-size: 28px;
-    color: #aaa;
-    cursor: pointer;
-    transition: color 0.3s;
-}
-
-.close-button:hover {
-    color: #333;
-}
-    </style>
+    // 如果想延遲 3 秒才跳轉：
+    // setTimeout(() => { window.location.href = "https://www.google.com"; }, 3000);
+  </script>
 </head>
 <body>
-
-    <div class="container">
-        <h1>排面照產生器<span id="infoBtn" class="info-icon">!</span></h1>
-
-        <div class="controls">
-            <label for="className">班別:</label>
-            <input list="classSuggestions" id="className" placeholder="請輸入班別">
-            <datalist id="classSuggestions">
-                <option value="早班"></option>
-                <option value="晚班"></option>
-                <option value="夜班"></option>
-            </datalist>
-        </div>
-
-        <div id="photoInputsContainer">
-            <div id="addPhotoBlock">
-                <span>+</span>
-            </div>
-        </div>
-
-        <div class="signature-section">
-            <h2>簽名 (可選)</h2>
-            <canvas id="signatureCanvas" class="disabled"></canvas>
-            <div class="signature-controls">
-                <button id="enableSignatureBtn">啟用簽名</button>
-                <button id="clearSignatureBtn">清除簽名</button>
-            </div>
-        </div>
-
-        <div class="action-buttons">
-            <button id="combineBtn">合併並生成照片</button>
-        </div>
-
-        <div class="output-section" id="output-section">
-            <h2>照片預覽(長按or右鍵儲存相片)</h2>
-            <canvas id="photoCanvas" width="2000" height="1400"></canvas>
-            <img id="finalImage" alt="合成排面照片">
-        </div>
-        
-<div id="infoModal" class="modal-overlay">
-    <div class="modal-content">
-        <span class="close-button">&times;</span>
-        <h2>運作原理與理念</h2>
-        <p>本網頁專為零售業交班設計，操作簡單，能大幅減少拼貼所花的時間。雖然已有平板數位交班系統，但許多店點仍要求員工拍攝排面照片並上傳群組，常導致手機內相片越存越多。</p>
-        <p>為解決這個問題，本網頁會先將交班照片自動合成，之後使用者可依需求選擇：</p>
-        <ul>
-            <li><strong>儲存於相簿：</strong>僅保留最終的一張合成照片，避免手機空間被大量佔用。</li>
-            <li><strong>直接分享至工作群組：</strong>免去額外存檔步驟，讓交班流程更輕鬆有效率。</li>
-        </ul>
-        <p><em>⚠️ 本網頁為低成本製作，架設於 GitHub Pages，因此無法保證在多人同時使用時網頁流量不會受影響。</em></p>
-    </div>
-</div>
-
-</div>
-<footer>
-    <p>Copyright © 2025 Edward. All rights reserved.</p>
-    <p>在 Gemini 的協助下完成。</p>
-    <p><strong>免責聲明：</strong>本網頁僅作為圖片處理工具，供個人使用，不提供檔案儲存或備份服務。使用者須自行確保所上傳內容之合法性與正確性。本網頁及開發者對於因使用本網頁所產生或引發之任何後果，概不負責。</p>
-</footer>
-</div>
-<script src="photo.js"></script>
+  <p>頁面載入中，將自動跳轉...</p>
 </body>
 </html>
