--- a/photogen/photo.html
+++ b/photogen/photo.html
@@ -152,27 +152,53 @@ input[type="text"], input[type="file"], select {
     border: 2px dashed #ccc;
     border-radius: 5px;
     overflow: hidden;
+    
+    /* 使用 Flexbox 實現置中 */
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    justify-content: center; /* 水平置中 */
+    align-items: center; /* 垂直置中 */
+    
     margin-top: 10px;
     background-color: #e9e9e9;
-    cursor: pointer; /* 讓整個預覽區塊可以點擊 */
+    cursor: pointer;
     text-align: center;
 }
 
-.photo-preview {
-    max-width: 100%;
-    max-height: 150px;
-    display: none; 
+/* 確保圖片和文字在容器內部也能置中 */
+.photo-preview-container img,
+.photo-preview-container .photo-preview-content {
+    align-self: center; /* 確保內容本身置中 */
 }
 
-/* 新增的預覽區塊提示文字樣式 */
+/* 相機圖示和文字的樣式 */
+.photo-preview-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    padding: 20px; /* 新增內邊距以避免過於緊湊 */
+}
+
+.camera-icon {
+    font-size: 48px;
+    line-height: 1;
+}
+
 .photo-preview-text {
     color: #888;
     font-size: 14px;
-    padding: 20px;
+}
+
+/* 確保上傳圖片後，預覽圖可以完全取代提示文字 */
+.photo-preview {
+    max-width: 100%;
+    max-height: 150px;
+    display: block !important;
+}
+
+/* 上傳圖片後隱藏提示文字，並讓圖片置中 */
+.photo-preview-container:has(.photo-preview:not([style*="display: none"])) .photo-preview-content {
+    display: none;
 }
 
 .signature-section {
