--- a/photogen/photo.html
+++ b/photogen/photo.html
@@ -447,7 +447,7 @@ footer{
 </head>
 <body>
 <div class="warning-banner" id="warningBanner">
-    <span>⚠️</span> 請注意：照片儲存於瀏覽器暫存中，請勿關閉或重新整理網頁，以免照片遺失！
+    <span>⚠️</span>照片暫存在瀏覽器中，若重新整理或關閉網頁，照片就會消失，請多加留意！
 </div>
     <div class="container">
         <h1>排面照產生器<span id="infoBtn" class="info-icon">!</span></h1>
