--- a/photogen/photo.html
+++ b/photogen/photo.html
@@ -470,7 +470,7 @@ footer{
         <div id="photoInputsContainer">
             <div id="addPhotoBlock">
                 <span>+</span>
-                <p class="photo-tip">照片儲存於瀏覽器暫存中，請勿關閉網頁</p>
+                <p class="photo-tip">照片暫存在瀏覽器中，若重新整理或關閉網頁，照片就會消失，請多加留意！</p>
             </div>
         </div>
 
