--- a/photogen/photo.html
+++ b/photogen/photo.html
@@ -297,6 +297,12 @@ button {
 
 #enableSignatureBtn { background-color: #28a745; }
 #enableSignatureBtn:hover { background-color: #218838; }
+.button-disabled {
+    background-color: #ccc;
+    color: #666;
+    cursor: not-allowed;
+    border-color: #999;
+}
 
 #clearSignatureBtn { background-color: #dc3545; }
 #clearSignatureBtn:hover { background-color: #c82333; }
@@ -523,6 +529,6 @@ footer{
     <p><strong>免責聲明：</strong>本網頁僅作為圖片處理工具，供個人使用，不提供檔案儲存或備份服務。使用者須自行確保所上傳內容之合法性與正確性。本網頁及開發者對於因使用本網頁所產生或引發之任何後果，概不負責。</p>
 </footer>
 </div>
-<script src="photo@10.js"></script>
+<script src="photo@11.js"></script>
 </body>
 </html>
