--- a/photogen/photo.html
+++ b/photogen/photo.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<title>排面照產生器</title>
+<title>排面拼貼產生器</title>
 
 <style>
 body {
@@ -611,9 +611,11 @@ input:checked + .slider:before {
             <span class="toggle-label" id="toggleLabel">用相機拍照</span>
         </div>
         <div id="photoInputsContainer">
-            <div id="addPhotoBlock">
-                <span>+</span>
-                <p class="photo-tip">照片暫存在瀏覽器中，若重新整理或關閉網頁，照片就會消失，請多加留意！</p>
+            <div class="add-photo-block" id="addPhotoBlock">
+                <div class="add-button">
+                    <span id="addIcon" class="add-icon">+</span>
+                    <div class="add-text">新增照片</div>
+                </div>
             </div>
         </div>
 
