--- a/photogen/photo.html
+++ b/photogen/photo.html
@@ -591,7 +591,7 @@ input:checked + .slider:before {
     <span class="close-btn">&times;</span>
 </div>
     <div class="container">
-        <h1>排面照產生器<span id="infoBtn" class="info-icon">!</span></h1>
+        <h1>排面拼貼照產生器<span id="infoBtn" class="info-icon">!</span></h1>
 
         <div class="controls">
             <label for="className">班別:</label>
@@ -615,6 +615,7 @@ input:checked + .slider:before {
                 <div class="add-button">
                     <span id="addIcon" class="add-icon">+</span>
                     <div class="add-text">新增照片</div>
+                    <p class="photo-tip">照片暫存在瀏覽器中，若重新整理或關閉網頁，照片就會消失，請多加留意！</p>
                 </div>
             </div>
         </div>
