--- a/photogen/photo.html
+++ b/photogen/photo.html
@@ -613,7 +613,7 @@ input:checked + .slider:before {
         <div id="photoInputsContainer">
             <div class="add-photo-block" id="addPhotoBlock">
                 <div class="add-button">
-                    <span id="addIcon" class="add-icon">+</span>
+                    <span id="addIcon" class="add-icon">📸</span>
                     <div class="add-text">新增照片</div>
                     <p class="photo-tip">照片暫存在瀏覽器中，若重新整理或關閉網頁，照片就會消失，請多加留意！</p>
                 </div>
@@ -660,6 +660,6 @@ input:checked + .slider:before {
     <p><strong>免責聲明：</strong>本網頁僅作為圖片處理工具，供個人使用，不提供檔案儲存或備份服務。使用者須自行確保所上傳內容之合法性與正確性。本網頁及開發者對於因使用本網頁所產生或引發之任何後果，概不負責。</p>
 </footer>
 </div>
-<script type="module" src="photo_v2@1.js"></script>
+<script type="module" src="photo_v2@2.js"></script>
 </body>
 </html>
