--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <script>
     // 一開啟就直接跳轉
     window.onload = function() {
-      window.location.href = "photogen/photo.html"; 
+      //window.location.href = "photogen/photo.html"; 
+      window.location.href = "https://phpstack-1527334-5882729.cloudwaysapps.com/";
     };
 
     // 如果想延遲 3 秒才跳轉：
